@@ -55,6 +55,7 @@ public class UATApplication extends ScreenBasedGame {
 		addScreen(new GeometryUAT());
 		addScreen(new GraphicsUAT(assetManager));
 		addScreen(new TextureRegionUAT());
+		addScreen(new SpriteUAT());
 		addScreen(new AudioUAT());
 		addScreen(new OrthogonalTiledMapNoCachingUAT(assetManager));
 		addScreen(new OrthogonalTiledMapWithCachingUAT(assetManager));
