@@ -10,6 +10,7 @@
 - Fixed Graphics#tint not being reset each frame
 - Fixed UI navigation cursor not updating when switching between controller and mouse
 - Fixed DesktopPlayerData not ensuring data directory exists when writing JSON or binary files
+- Fixed Sprite not carrying over flip status from TextureRegion
 
 [1.8.2]
 - Fixed UI hotkeys triggering actions while elements are disabled
